successfully get database list to client and append to the DOM

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,5 +11,21 @@
 </head>
 <body>
     <header><h1>To-Do List</h1></header>
+    <div>
+        <h3>List</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th>Note</th>
+                    <th>Category</th>
+                    <th>Priority(1-5)</th>
+                    <th>Completed</th>
+                    <th>Time Completed</th>
+                </tr>
+            </thead>
+            <tbody id="to-do-list">
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
