functioning post route from client to database

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,6 +11,13 @@
 </head>
 <body>
     <header><h1>To-Do List</h1></header>
+    <input type="text" id="input-note" placeholder="What To Do?">
+    <input type="text" id="input-category" placeholder="Category">
+    <input type="number" id="input-priority" placeholder="Priority(1-5)">
+    <input type="text" id="input-isComplete" placeholder="Is this task finished?">
+    <input type="text" id="input-timeCompleted" placeholder="When did you do it?">
+    <button id="submit-button">Add To-Do</button>
+
     <div>
         <h3>List</h3>
         <table>
