created a put and delete route in the server

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -23,7 +23,7 @@
     </select>
     <select type="number" id="input-isComplete">
         <option value="false" selected>Task Not Complete</option>
-        <option value="true" selected>Task Complete</option>
+        <option value="true">Task Complete</option>
     </select>
     <input type="datetime-local" id="input-timeCompleted" placeholder="When did you do it?">
     <button id="submit-button">Add To-Do</button>
