--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To-Do List</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
     <script src="vendors/jquery.js"></script>
     <script src="scripts/client.js"></script>
 </head>
 <body>
+
     <header><h1>To-Do List</h1></header>
     <input type="text" id="input-note" placeholder="What To Do?">
     <input type="text" id="input-category" placeholder="Category">
@@ -36,13 +40,19 @@
                     <th>Note</th>
                     <th>Category</th>
                     <th>Priority(1-5)</th>
-                    <th>Completed</th>
+                    <th>Status</th>
                     <th>Time Completed</th>
+                    <th>Task Complete?</th>
+                    <th>Delete</th>
                 </tr>
             </thead>
             <tbody id="to-do-list">
             </tbody>
         </table>
     </div>
+    <!-- Bootstrap script/popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
 </body>
 </html>
