--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,11 +10,12 @@
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
     <script src="vendors/jquery.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="scripts/client.js"></script>
 </head>
 <body>
-
     <header><h1>To-Do List</h1></header>
+
     <input type="text" id="input-note" placeholder="What To Do?">
     <input type="text" id="input-category" placeholder="Category">
     <label for="input-priority">Priority:</label>
