--- a/server/public/index.html
+++ b/server/public/index.html
@@ -17,22 +17,24 @@
 <body>
     <header><h1>To-Do List</h1></header>
 
-    <div id="input-form">
-        <input type="text" id="input-note" placeholder="Enter Task">
-        <input type="text" id="input-category" placeholder="List Topic">
-        <label for="input-priority">Priority:</label>
-        <select type="number" id="input-priority">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-        </select>
-        <button id="submit-button">Add To-Do</button>
+    <div class="container" id="input-form">
+        <form>
+            <input type="text" id="input-note" placeholder="Enter Task">
+            <input type="text" id="input-category" placeholder="List Topic">
+            <label for="input-priority"><h5>Priority:</h5></label>
+            <select type="number" id="input-priority">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+            <button id="submit-button">Add To-Do</button>
+        </form>
     </div>
     <br>
-    <div id="sort-form">
-        <label for="input-sort">Sort By</label>
+    <div class="container" id="sort-form">
+        <label for="input-sort"><h5>Sort By:</h5></label>
         <select id="input-sort">
             <option value="id">Newest</option>
             <option value="isComplete">Completed Status</option>
@@ -43,7 +45,7 @@
         </select>
         <button id="sort-button">Sort</button>
     </div>
-    <div>
+    <div class="container-fluid">
         <table>
             <thead>
                 <tr>
